Edit layout for better mobile experience

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <span class="navicon" />
       </label>
       <ul id="menu">
-        <li><a href="index.html#portfolio">Portfolio</a></li>
-        <li><a href="index.html#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="resume.pdf" target="_blank">Résumé</a></li>
       </ul>
     </nav>
