Polish content padding for mobile view Edit color, shadow, and animation in Project

--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
     
     <a name="portfolio"/></a>
     <div id="portfolio">
-      <a class="project-column" href="pinchfun/index.html">
-        <img class="project-img" src="pinchfun/main.png" size="100%" />
-        <div class="project-title">PinchFun</div>
-        <div class="project-short-description">A cooperative fine motor training game for preschool children with developmental delay</div>
+      <a href="pinchfun/index.html">
+        <div class="project-info"> 
+          <div class="project-img">
+            <img src="pinchfun/main.png" />
+          </div>
+          <h2 class="project-title">PinchFun</h2>
+          <p class="project-short-description">A cooperative fine motor training game for preschool children with developmental delay</p>
+        </div>
       </a>
     </div>
 
