Edit font style and paragraph for better readability

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600" />
 
     <!-- GA -->
   </head>
@@ -130,7 +130,7 @@
 
     <header>
       <h1>
-        Hello! I'm ChiaYu, an HCI enthusiast, user researcher, and interaction designer.
+        Hello! I'm ChiaYu - an HCI enthusiast, user researcher, and interaction designer.
       </h1>
       <p>
         My passion lies in understanding human and constructing experience between human and technologies. My research experience falls across technologies for children and family, participatory design, intelligent system, music streaming service, haptic technology, and manufacturing.
@@ -191,7 +191,10 @@
       </h2>
       <p>Hi, I'm ChiaYu (Mandarin: "佳妤"; Pronounciation: <em>Ja-Yu</em>). </p>
       <p>
-        With a dual education background in business and human-computer interaction (HCI), internship experience in UX consultancy as a UX researcher and in software industry as a web developer, I have developed research, design, business, and engineering skills. I enjoy working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy. <b>As a researcher,</b> I identify the problem by engaging user and adopting flexible research methods to unveil human need & see the problem in social context, analyze and share the research insights with the team. <b>As an interaction designer,</b> I make the technology delightful and intuitive with user in mind, design and build physical/digital prototypes iteratively, and test with the real user.
+        With a dual education background in business and human-computer interaction (HCI), internship experience in UX consultancy as a UX researcher and in software industry as a web developer, I'm a happy hybrid who can do research, interaction design, code and think in business. I enjoy working collaboratively with interdisciplinary teams and bridging human-centered design with business strategy. 
+      </p>
+      <p>
+        <b>As a researcher,</b> I identify the problem by engaging user and adopting flexible research methods to unveil human need & see the problem in social context, analyze and share the research insights with the team. <b>As an interaction designer,</b> I make the technology delightful and intuitive with user in mind, design and build physical/digital prototypes iteratively, and test with the real user.
       </p>
       <p>
         Based and grew up in Báng-kah, Taiwan, I always fancy observing and interacting with people from different culture and of different ages. Since junior high, I self-learned to code and became much interested in programming, for it enables me to build ideas into visual programs and play with the data as I explored math. Later in college, I developed interests in creating technology arts and digital design, before I joined Innovative Interface Lab at National Chengchi University, where I dived into human-computer interaction research and crafted technologies for future. <b>There's an human researcher in me at work and beyond work.</b> I'm keenly passionate in observing human-human & human-artifact interaction and understanding the flux in between.
@@ -323,7 +326,7 @@
         </li>
         <li class="experience">
           <div class="award">
-            1st Place, 
+            Winner, 
             <span class="award-title">2016 - ACM SIGCHI  Student Game Competition, Games for a Purpose</span>
           </div>
         </li>
@@ -371,7 +374,7 @@
         </a>
       </div>
       <div id="signature">
-        Build with ❤️ by ChiaYu
+        Designed and Built with ❤️ by ChiaYu. Hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages.</a>
       </div>
     </footer>
   </body>
