Fix modal box scroll & overflow problem in Projects

--- a/index.html
+++ b/index.html
@@ -175,20 +175,21 @@
           <img src="#" alt="Stamp Plate" class="project-image"/>
         </div>
         <!-- The Modal -->
-        <div class="modal-mask"></div>
-        <!-- Modal content -->
-        <div class="modal-popup">
-          <div class="modal-header">
-            <span class="close">×</span>
-            <p>Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</p>
+        <div class="modal-mask">
+          <!-- Modal content -->
+          <div class="modal-popup">
+            <div class="modal-header">
+              <span class="close">×</span>
+              <p>Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</p>
+            </div>
+            <div class="modal-role">
+              User Research, Prototyping
+            </div>
+            <div class="modal-body">
+              <p>Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</p>
+            </div>
+            <img src="#" class="modal-image" />
           </div>
-          <div class="modal-role">
-            User Research, Prototyping
-          </div>
-          <div class="modal-body">
-            <p>In this project, ...</p>
-          </div>
-          <img src="#" class="modal-image" />
         </div>
       </div>
            
@@ -199,20 +200,21 @@
           <img src="#" alt="Manufacturing" class="project-image"/>
         </div>
         <!-- The Modal -->
-        <div class="modal-mask"></div>
-        <!-- Modal content -->
-        <div class="modal-popup">
-          <div class="modal-header">
-            <span class="close">×</span>
-            <p>Human-centered manufacturing</p>
+        <div class="modal-mask">
+          <!-- Modal content -->
+          <div class="modal-popup">
+            <div class="modal-header">
+              <span class="close">×</span>
+              <p>Human-centered manufacturing</p>
+            </div>
+            <div class="modal-role">
+              User Research, Prototyping
+            </div>
+            <div class="modal-body">
+              <p>We see...</p>
+            </div>
+            <img src="#" class="modal-image" />
           </div>
-          <div class="modal-role">
-            User Research, Prototyping
-          </div>
-          <div class="modal-body">
-            <p>We see...</p>
-          </div>
-          <img src="#" class="modal-image" />
         </div>
       </div>
 
@@ -223,20 +225,21 @@
           <img src="#" alt="Tai Chi" class="project-image"/>
         </div>
         <!-- The Modal -->
-        <div class="modal-mask"></div>
-        <!-- Modal content -->
-        <div class="modal-popup">
-          <div class="modal-header">
-            <span class="close">×</span>
-            <p>A haptic motion guidance sleeve for Tai Chi Learning</p>
+        <div class="modal-mask">
+          <!-- Modal content -->
+          <div class="modal-popup">
+            <div class="modal-header">
+              <span class="close">×</span>
+              <p>A haptic motion guidance sleeve for Tai Chi Learning</p>
+            </div>
+            <div class="modal-role">
+              User Testing, Prototyping
+            </div>
+            <div class="modal-body">
+              <p>Exercise...</p>
+            </div>
+            <img src="#" class="modal-image" />
           </div>
-          <div class="modal-role">
-            User Testing, Prototyping
-          </div>
-          <div class="modal-body">
-            <p>Exercise...</p>
-          </div>
-          <img src="#" class="modal-image" />
         </div>
       </div>           
     </section>
