Add medium link to Selected Project

--- a/index.html
+++ b/index.html
@@ -148,17 +148,18 @@
         Selected Projects
       </h2>
       
-      <a href="/pinchfun" class="project pinchfun first-item">
+      <a href="https://medium.com/@chiayuc/designing-a-child-parent-cooperative-game-for-fine-motor-skills-training-d4c6ea22e872" class="project pinchfun first-item">
         <div class="project-name">Designing a child-parent cooperative game for fine motor skills training</div>
         <div class="project-role">User Research, Interaction Design, Prototyping
         </div>
+        <div class="project-cta">View Case Study</div>
         <img src="pinchfun/thumbnail.png" alt="PinchFun" class="project-image"/>
       </a>
       
-      <a href="/music" class="project music last-item">
+      <a class="project music last-item">
         <div class="project-name">Design for better music listening experience on mobile
         </div>
-        <div class="project-role">User Research, Interaction Design, Prototyping
+        <div class="project-role">User Research, UX Design, Prototyping
         </div>
         <img src="music/thumbnail.png" alt="Music" class="project-image"/>
       </a>
@@ -172,7 +173,7 @@
         <div class="other-project first-item">
           <div class="project-name">Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</div>
           <div class="project-role">User Research, Prototyping</div>
-          <img src="#" alt="Stamp Plate" class="project-image"/>
+<!--          <img src="#" alt="Stamp Plate" class="project-image"/>-->
         </div>
         <!-- The Modal -->
         <div class="modal-mask">
@@ -186,7 +187,7 @@
               User Research, Prototyping
             </div>
             <div class="modal-body">
-              <p>Stamp Plate: Study family mealtime technology enabling data literacy for preschool children</p>
+              <p></p>
             </div>
             <img src="#" class="modal-image" />
           </div>
@@ -197,7 +198,7 @@
         <div class="other-project">
           <div class="project-name">Human-centered Manufacturing</div>
           <div class="project-role">User Research, Prototyping</div>
-          <img src="#" alt="Manufacturing" class="project-image"/>
+<!--          <img src="#" alt="Manufacturing" class="project-image"/>-->
         </div>
         <!-- The Modal -->
         <div class="modal-mask">
@@ -211,7 +212,7 @@
               User Research, Prototyping
             </div>
             <div class="modal-body">
-              <p>We see...</p>
+              <p></p>
             </div>
             <img src="#" class="modal-image" />
           </div>
@@ -222,7 +223,7 @@
         <div class="other-project last-item">
           <div class="project-name">A haptic motion guidance sleeve for Tai Chi Learning</div>
           <div class="project-role">User Testing, Prototyping</div>
-          <img src="#" alt="Tai Chi" class="project-image"/>
+<!--          <img src="#" alt="Tai Chi" class="project-image"/>-->
         </div>
         <!-- The Modal -->
         <div class="modal-mask">
@@ -236,7 +237,7 @@
               User Testing, Prototyping
             </div>
             <div class="modal-body">
-              <p>Exercise...</p>
+              <p></p>
             </div>
             <img src="#" class="modal-image" />
           </div>
@@ -274,7 +275,7 @@
         <b>As a researcher,</b> I identify the problem by engaging user and adopting flexible research methods to unveil human need, analyze and share the research insights with the team. <b>As an interaction designer,</b> I make the technology delightful and intuitive with user in mind, iteratively design and build physical/digital prototypes, and test with the real user.
       </p>
       <p>
-        Based and grew up in Báng-kah, Taiwan, I always fancy observing and interacting with people from a different culture and of different ages. Since junior high, I self-learned to code and became much interested in programming, for it enables me to build ideas into visual programs and play with the data as I explored math. Later in college, I developed interests in creating technology arts and digital design and found my passion deeply lies in HCI; therefore, I joined Innovative User Interface Lab at National Chengchi University, where I dived into HCI research and crafted technologies from now to future. <b>There's an human researcher in me at work and beyond work.</b>  I'm keenly passionate in observing human-human & human-artifact interaction and understanding the flux in between.
+        Based and grew up in Báng-kah, Taiwan, I always fancy observing and interacting with people from a different culture and of different ages. Since junior high, I self-learned to code and became much interested in programming, for it enables me to build ideas into visual programs and play with the data as I explored math. Later in college, I developed interests in creating technology arts and digital design and found my passion deeply lies in HCI; therefore, I joined Innovative User Interface Lab at National Chengchi University, where I dived into HCI research and crafted technologies from now to future. <b>There's a human researcher in me at work and beyond work.</b>  I'm keenly passionate in observing human-human & human-artifact interaction and understanding the flux in between.
       </p>
       <p>
         <h3>Things I love ❤️ </h3>
@@ -297,7 +298,7 @@
     <div id="about-container">
       <ul class="about-column">
         <h4>Experience</h4>
-        <a class="resume-cfa" href="resume.pdf" target="_blank">Download Résumé</a>
+        <a class="resume-cta" href="resume.pdf" target="_blank">Download Résumé</a>
         <li class="experience">
           <div class="role">UX Research Intern</div>
           <div class="affiliation">PEBBO eXperience Design Consultancy</div>
