--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <a href="#about"  onclick="document.getElementById('menu-btn').checked=false;">About</a>
         </li>
         <li>
-          <a href="resume.pdf" target="_blank">Résumé</a>
+          <a href="chiayuchen_resume.pdf" target="_blank">Résumé</a>
         </li>
       </ul>
     </nav>
@@ -137,7 +137,7 @@
         My passion lies in understanding human and constructing experience between human and technologies. My past projects fall across technologies for children and family, intelligent system, music streaming service, wearable haptic technology, and manufacturing.
       </p>
       <p>
-        <a href="#portfolio">Explore my portfolio</a> or <a href="resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
+        <a href="#portfolio">Explore my portfolio</a> or <a href="chiayuchen_resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
         Also, you can <a href="#about">Learn more about me</a>.
       </p>
     </header>
@@ -252,7 +252,7 @@
       </p>
       <p>
         <a href="mailto:chiayuchentw@gmail.com">Email me</a> or <a href="https://calendly.com/chiayu" target="_blank">book time on my calendar</a> for a chat.<br/>
-        Download my full résumé <a href="resume.pdf" target="_blank">here</a>.
+        Download my full résumé <a href="chiayuchen_resume.pdf" target="_blank">here</a>.
       </p>
       <p>
         ⌛ In a rush? Reach me via <a href="tel:+886922262237">
@@ -298,7 +298,7 @@
     <div id="about-container">
       <ul class="about-column">
         <h4>Experience</h4>
-        <a class="resume-cta" href="resume.pdf" target="_blank">Download Résumé</a>
+        <a class="resume-cta" href="chiayuchen_resume.pdf" target="_blank">Download Résumé</a>
         <li class="experience">
           <div class="role">UX Research Intern</div>
           <div class="affiliation">PEBBO eXperience Design Consultancy</div>
