--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140784664-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-140784664-1');
+  </script>
+
     <title>ChiaYu Chen</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
@@ -22,7 +32,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/icon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600" />
-    <!-- GA -->
   </head>
 
   <body>
