Add PinchFun in Portfolio Add project style

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         Selected Projects
       </h2>
       
-      <a href="https://medium.com/@chiayuc/designing-a-child-parent-cooperative-game-for-fine-motor-skills-training-d4c6ea22e872" class="project pinchfun first-item">
+      <a href="pinchfun" class="project pinchfun first-item">
         <div class="project-name">Designing a child-parent cooperative game for fine motor skills training</div>
         <div class="project-role">User Research, Interaction Design, Prototyping
         </div>
