Update the text in PinchFun

--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -279,7 +279,7 @@
         For our study, we chose to adopt the co-design methodology along with co-play among each of the thirteen child-parent groups, to understand how children and their parents think about PinchFun.
       </p>
       <p>
-        Participatory Design (PD) a method to bring users and designers together to co-create new technologies. Children can join the design process as an equal stakeholder and co-work with the adults in the design team to share their opinions and their expert knowledge of "being kids". Creative PD techniques have been shown to elicit expressive ideas which were valuable for design.
+        Participatory Design (PD) is a method to bring users and designers together to co-create new technologies. Children can join the design process as an equal stakeholder and co-work with the adults in the design team to share their opinions and their expert knowledge of "being kids". Creative PD techniques have been shown to elicit expressive ideas which were valuable for design.
       </p>
       <p>
         <b>When children provide their design ideas, PD makes it possible to understand their feedback toward technology.</b> Previous research also suggested that parent-child co-design can give us a chance to observe families engaged in the process of co-design, which reveals new insights into the relationships, tensions, and motivations of families, helping us to understand better how the technology fits in the at- home training context (Yip et al., 2016).
@@ -329,7 +329,7 @@
       
       <h3>Fine motor skill training : Learning the repetitive pinch-and-release mechanism</h3>
       <p>
-        Children were able to learn the pinch and release movement in their first or second round of gameplay. Half of them don’t understand it for their first time playing the game. They were confused and a bit frustrated, for they pinched the clothespin hard, but the bubble didn’t show on the screen. Some adult participants gave their child some hints: "Why not try to release and pinch again?" , alternatively a more direct guidance to blow a bubble: "Release and pinch again. Your bubble has disappeared. You have to do it again to blow a new bubble."
+        Children were able to learn the pinch and release movement in their first or second round of gameplay. Half of them don’t understand it for their first time playing the game. They were confused and a bit frustrated, for they pinched the clothespin hard, but the bubble didn’t show on the screen. Some adult participants gave their child some hints: <em>"Why not try to release and pinch again?"</em> , alternatively a more direct guidance to blow a bubble: <em>"Release and pinch again. Your bubble has disappeared. You have to do it again to blow a new bubble."</em>
       </p>
       <p>
         With or without these control hints, all the children were able to learn the pinch-release mechanism and they would follow this mechanism by the end of the second round — They pinch and release again and again (And Yes! that’s our design goal to have them repeat this!). Their strategy of blowing a new bubble differs. Some of them released their pinch right after they collected a gift and re-pinched when they saw a new gift approaching; while the others keep pinching the clothespin and when they saw a gift approaching they immediately released and re-pinched.
@@ -388,7 +388,7 @@
       </p>
       <p class="quote">
         Researcher: "Whom do you want to play this game with?" <br />
-        Child: "Mommy (Daddy)… but Mom (or Dad) doesn’t have time to play with me" <br/>
+        Child: "Mommy (Daddy)... but Mom (or Dad) doesn’t have time to play with me" <br/>
         (From two study sessions)
       </p>
       <p>
@@ -422,7 +422,7 @@
     <section>
       <h2>Limitation & Future work</h2>
       <p>
-        The study is limited in that we only evaluated our design during twelve two-hour sessions, because of the time & budget limit. Future work remains to understand if this game-based design can enhance engagement in training in a long-term; also, the long-term occupational evaluation needs to be conducted to examine the effect of this therapy.
+        The study is limited in that we only evaluated our design during twelve two-hour sessions, because of the time & budget limit. Future work remains to understand if this game-based design can enhance engagement in training in a long-term; also, the long-term occupational evaluation needs to be conducted to examine the effect of this therapy. When I was planning the evaluation, I've also considered adopting the diary study along with the cultural probe to better understand how our design creates a relationship with the family lives.
       </p>
       <p>
         Besides, the design currently focused on strengthening the small muscles of hands and using pads of thumb and index finger. If the project still goes on, the future design should incorporate more motor skills.
