Add Music inin Projects

--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@
         <img src="pinchfun/thumbnail.png" alt="PinchFun" class="project-image"/>
       </a>
       
-      <a class="project music last-item">
+      <a href="music" class="project music last-item">
         <div class="project-name">Design for better music listening experience on mobile
         </div>
         <div class="project-role">User Research, UX Design, Prototyping
         </div>
+        <div class="project-cta">View Case Study</div>
         <img src="music/thumbnail.png" alt="Music" class="project-image"/>
       </a>
       
