--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -40,8 +40,8 @@
       <a id="home" href="../#portfolio">
         <div id="home-title">← Home</div>
       </a>
-      <a id="next" href="#">
-<!--        <div id="home-title">Next Project →</div>-->
+      <a id="next" href="../music">
+        <div id="home-title">Next Project: Music →</div>
       </a>
     </nav>
 
