Edit text in Music

--- a/music/index.html
+++ b/music/index.html
@@ -146,6 +146,7 @@
       <h3>Digital/Hi-fi prototyping & Testing</h3>
       <p>We wrapped up the feedback from the lo-fi prototype testing and created two hi-fi versions of the prototype, working with designers from the client team, using Principle. With the digital prototype testing, we gathered the user feedback on not only the usability but interaction and visual style.</p>
       <p>We designed several tasks (e.g., save the music to a specific playlist, switch to random play...) and tested these tasks on each version, to understand the more desired design.</p>
+      <p>Finally, we analyzed the data gathered from the testing sessions, shared the results to the client and detailed documents for the client to work on the product revamp.</p>
       <figure>
         <img src="6_hi_fi_testing.png" alt="Hi-fidelity prototype testing using digital interactive prototypes. Music app.">
         <img src="7_visual_preference.png" alt="Mockups">
@@ -156,6 +157,7 @@
     <section>
       <h2>Learnings and Reflection</h2>
       <p>
+        Though I cannot unveil much information about the project outcome, I did learn a lot from this project that I would love to share.
         <ul>
           <li>
             When conducting a user interview, always refer to their actual behavior besides listening to their thoughts. We often noticed that when a user says, “I’m not familiar with this product feature.” “I rarely use this function; it’s okay to kill this function. I don’t need it at all” in the interview and card-sorting sessions. However, they still operate those subtle features they claim “not needed” as we observe how they use their favorite music APPs or our hi-fi prototype. They use the features but take it for granted.
@@ -178,7 +180,7 @@
             To create smooth user flow, apart from the UI of the music APP, the designers should also consider the device they use and the touchpoints other from APP UI itself. For example, many people play the music with earphones or Bluetooth speakers; therefore, it’s essential also to consider how they use the earphone remote and the buttons on the speakers. Also, it’s common that people multitask on the mobile device; therefore, it’s also important to design the notification center, control center, and lock screen, to fulfill the user need.
           </li>
           <li>
-            Aside from the designers, other team members such as engineers, marketers, customer service team are also much familiar with the product; some are very close to the user's voice. Their opinions are also valuable. Involving these team members in the design process builds a consensus in the product team, which may also lead to better execution of the design. More importantly, it's valuable to have the team immersed in the human-centered design mindset together, and further see them share this mindset with the other team member afterward.
+            Aside from the designers, other team members such as engineers, marketers, customer service team are also much familiar with the product; some are very close to the user's voice. Their opinions are also valuable. Involving these team members in the design process builds a consensus in the product team, which may also lead to better execution of the design. My project lead came up with a way to closely cooperate and align the process with the client, which I found awesome to work with the client: We have a remote standup meeting every morning to briefly share the daily research process; the teams would give comments to each other. In this way, the team did work as a team; The team member can share thoughts and wouldn't feel left behind. It's also valuable to have the team immersed in the human-centered design mindset together, and further see them share this mindset with the other team member afterward.
           </li>
         </ul>
       </p>
