Add links in PUblication and Awards

--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@
             <span class="pub-date">TAICHI 2018 Paper</span>
           </div>
           <div class="author">Ying-Yu Chen, Dennis Wang, <b>Chia-Yu Chen</b>, Daniela Rosner, Alexis Hiniker</div>
+          <div>
+            <a href="file/TAICHI_2018_paper_31.pdf" class="button" target="_blank">Paper</a>
+          </div>
         </li>
         <li class="experience">
           <div class="paper">
@@ -418,12 +421,18 @@
           <div class="award">
             1st Place, 
             <span class="award-title">2017 - 104 Open Data Hackathon, Mobile App & Web Service</span>
+            <div>
+              <a href="https://plus.104.com.tw/activity/2410f393-37ce-4292-8b4f-e48f03c0bc89" class="button" target="_blank">Press Article</a>
+            </div>
           </div>
         </li>
         <li class="experience">
           <div class="award">
             Winner, 
             <span class="award-title">2016 - ACM SIGCHI  Student Game Competition, Games for a Purpose</span>
+          </div>
+          <div>
+            <a href="https://medium.com/as-a-product-designer/c993c9395df2" class="button" target="_blank">Press Article</a>
           </div>
         </li>
         <li class="experience">
