Edit layout in Music

--- a/music/index.html
+++ b/music/index.html
@@ -50,7 +50,7 @@
         Design for better music listening experience on mobile
       </h1>
       <div class="progress-bar"></div>
-      <figure style="margin: 5% 20%" >
+      <figure class="mobile-app">
         <img src="music-app.gif" alt="Music player">
       </figure>
       <p>
