--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         Hello! I'm ChiaYu, an HCI enthusiast, user researcher, interaction designer, and sometimes developer - Yes I'm a happy hybrid.
       </h1>
       <p>
-        My passion lies in understanding human,  constructing experience between human and technologies, and empowering human with their instinct.
+        My passion lies in understanding human,  constructing experience between human and technologies, and empowering human to live with instinct.
       </p>
       <p>
         <a href="#portfolio">Explore my portfolio</a> or <a href="chiayuchen_resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
