--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <a class="resume-cta" href="chiayuchen_resume.pdf" target="_blank">Download Résumé</a>
         <li class="experience">
           <div class="role">UX Research Intern</div>
-          <div class="affiliation">PEBBO eXperience Design Consultancy</div>
+          <div class="affiliation"><a href="https://medium.com/@chiayuc/3e02b018c560">PEBBO eXperience Design Consultancy</a></div>
           <div class="location">Taipei, Taiwan</div>
           <div class="duration">Jun 2017 - Dec 2017</div>
         </li>
