--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
         <a href="#portfolio">Explore my portfolio</a> or <a href="chiayuchen_resume.pdf" target="_blank">View my résumé</a> to get an overall sense. <br/>
         Also, you can <a href="#about">Learn more about me</a>.
       </p>
+      <div id="overlay">
+        <div id="overlay-header"></div>
+        <img src="img/profile.JPG" alt="profile picture" id="profile-image">
+      </div>
     </header>
     
     <a name="portfolio"/></a>
@@ -427,7 +431,7 @@
           <li>🖐️ Bake tangible & Intangible things
             <ul>
               <li>👥 💭 play around in hackathon and workshops, share thoughts, bake ideas into solid prototypes</li>
-              <li>🔧🌍 fix things, reuse the daily materials</li>
+              <li>🔧🌍 fix things & put things together, give the artifacts a new life</li>
               <li>🍰 🍳 bake desserts and make Taiwanese/Japanese cuisine</li>
               <li>👻 🎵 listen and play with experimental music </li>
             </ul>
@@ -445,7 +449,7 @@
         <a class="resume-cta" href="chiayuchen_resume.pdf" target="_blank">Download Résumé</a>
         <li class="experience">
           <div class="role">UX Research Intern</div>
-          <div class="affiliation">PEBBO eXperience Design Consultancy</div>
+          <div class="affiliation"><a href="https://medium.com/@chiayuc/3e02b018c560" target="_blank">PEBBO eXperience Design Consultancy</a></div>
           <div class="location">Taipei, Taiwan</div>
           <div class="duration">Jun 2017 - Dec 2017</div>
         </li>
