--- a/music/index.html
+++ b/music/index.html
@@ -41,7 +41,7 @@
         <div id="home-title">← Last: PinchFun</div>
       </a>
       <a id="next" href="../#portfolio">
-        <div id="home-title">Home →</div>
+        <div id="home-title">Other Projects →</div>
       </a>
     </nav>
 
