Edit the we terms

--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -150,16 +150,16 @@
         "Ideate, Build prototypes, Test, and Fail; Revisited the problem, Build new prototypes, and Validate again"
       </h2>
       <h2>Prototyping, Testing, and again</h2>
-      <p>At the beginning, we brainstormed several design concepts, in which we chose to adopt a common tool of traiditional training of fine motor skills -- <b>the clothespin</b>.
+      <p>At the beginning, the team brainstormed several design concepts and chose to adopt a common tool of traiditional training of fine motor skills -- <b>the clothespin</b>.
       </p>
       <h3>Lo-fi Prototyping and Testing</h3>
-      <p>We built lo-fi prototypes using basic circuits, Arduino, and Processing on iPad, and then tested these concept with the children from two special schools.</p>
-      <p>However, for the very first version, which a child has to hold the eletric element with the clothespin to play with the digital story book, we found that although the children enjoyed the game a lot, they tend to press the screen directly with their fingers.</p>
+      <p>The team built lo-fi prototypes using basic circuits, Arduino, and Processing on iPad, and then tested these concept with the children from two special schools.</p>
+      <p>However, for the very first version, the child has to hold the eletric element with the clothespin to play with the digital story book. although the children enjoyed the game a lot, they tend to press the screen directly with their fingers.</p>
       <figure>
         <img src="clip-prototype.png" alt="Preliminary idea testing. iPad and game elements.">
         <figcaption>The very first prototype was a digital story book, which adopted clothespin, eletric capacity elements, and iPad.</figcaption>
       </figure>
-      <p>We then brainstormed again and came up with a new idea that could elicit the interaction with the clothespin solely. As the children pinch harder, there would be a light and sound effect. This prototype enabled the child to explore how different pressure led to different feedbacks. The children loved the interaction and showed excitement, however, they could not understand why to press the clothespin and got bored in a short while.</p>
+      <p>The team then brainstormed again and came up with a new idea that could elicit the interaction with the clothespin solely. As the children pinch harder, there would be a light and sound effect. This prototype enabled the child to explore how different pressure led to different feedbacks. The children loved the interaction and showed excitement, however, they could not understand why to press the clothespin and got bored in a short while.</p>
       <figure>
         <img src="preliminary_testing.gif" alt="Preliminary User Testing">
         <img src="4_preliminary_study.png" alt="Preliminary User Testing">
@@ -167,7 +167,7 @@
       </figure>  
       <h3>Building Mid-Fi Prototype & Testing again</h3>
       <p>
-        We then revisited the design objectives -- A better design is needed to encourage the repetitive and more precise pinch. Also, considering the at-home training context, we tried to include the parents in the design.
+        The team then revisited the design objectives together -- A better design is needed to encourage the repetitive and more precise pinch. Also, considering the at-home training context, we tried to include the parents in the design.
       </p>
       <p>
         We brainstormed a more completed game flow, and built a mid-fi prototype using Unity3D, basic circuits, and Arduino. In this prototype, there are two players in the game, both using hands and fingers to control the main character; they need to cooperate to play the game. We also added some narrative elements in the game to lead the player to do the pinch naturally.
