Update portfolio for 2022

--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -37,8 +37,8 @@
 
   <body>
     <nav>
-      <a id="home" href="../#portfolio">
-        <div id="home-title">← Home</div>
+      <a id="home" href="../cubo">
+        <div id="home-title">Last: Sleep Analytics</div>
       </a>
       <a id="next" href="../music">
         <div id="home-title">Next: Music APP →</div>
